<resources>
    <string name="app_name">iMET</string>
    <string name="background">background</string>
    <string name="login">Log In or Create an Account</string>
    <string name="loginLabel">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="action_settings">Settings</string>
    <string name="select_time">Select time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
