<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wanghao.imet.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:id="@+id/imageView"
            android:contentDescription="@string/background"
            android:src="@drawable/android_login_background"
            android:tintMode="screen"
            android:tint="#1a6bb7"
            android:adjustViewBounds="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login"
            android:id="@+id/loginCaption"
            android:background="#79e5e5"
            android:textColor="#585858"
            android:layout_gravity="top"
            android:padding="30dp"
            android:textAlignment="center"
            android:layout_marginTop="-20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:textColor="#585858"
            android:hint="@string/email"
            android:textColorHint="#635c5c"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_gravity="center_horizontal"
            android:textColor="#585858"
            android:hint="@string/password"
            android:textColorHint="#5f5b5b"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#751fb2"
            android:textColor="#f1e2e2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/forget_password"
            android:id="@+id/forgetPasswordText"
            android:layout_gravity="center_horizontal"
            android:textColor="#524e4e"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/create_an_account"
                android:id="@+id/createAccountText"
                android:layout_gravity="bottom|center_horizontal"
                android:textColor="#4e4a4a" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginLabel"
        android:textColor="#4e4a4a"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:id="@+id/loginLabel"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
